feat: change theme to vno-jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
+  {% include head.html %}
+
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    {% include header.html %}
+
+    <div class="content-wrapper">
+      <div class="content-wrapper__inner">
+        {{ content }}
+      </div>
+
+      {% include footer.html %}
+    </div>
   </body>
 </html>
